# paperhand

./: .gitignore  Anchor.toml  README.org  carnival_doc.org  copyIdl.js  copyIdl.sh  package.json
app/: bazaarIdl.json  exhibitIdl.json  next.config.js  package.json  tailwind.config.js  tsconfig.json
app/components/: ExhibitCard.tsx  ExhibitList.tsx  Navbar.tsx  NftCard.tsx  NftList.tsx
app/pages/: _app.tsx
app/pages/exhibition/: index.tsx
app/pages/home/: index.tsx  temp.tsx
app/utils/: provider.ts
deploy/: bootstrap.ts  constants.ts  testNet.ts  utils.ts
floorbid_ui/: package.json
nftamm_ui/: next.config.js  package.json
old_programs/shop/: Cargo.toml
other/: metaplex_test.ts
paperhand_ui/: next.config.js  package.json
programs/bazaar/: Cargo.toml
programs/caravan/: Cargo.toml
programs/carnival/: Cargo.toml
programs/checkout/: Cargo.toml
programs/displaycase/: Cargo.toml
programs/displaycase/src/: lib.rs
programs/exhibition/: Cargo.toml
programs/exhibition/src/: lib.rs  utils.rs
programs/exhibition/src/state/: metaplex_adapter.rs  metaplex_anchor.rs
programs/fete/: Cargo.toml
programs/nftamm/: Cargo.toml
programs/nftheap/: lib.rs  nft_heap.rs
programs/nftswap/: Cargo.toml
scripts/: copyIdl.sh  floorbid_script.ts  nftamm_script.ts  paperhand_setup.ts  restart.sh  testNet.ts
tests/: bazaar.ts  caravan.ts  carnival.ts  checkout.ts  exhibition.ts  floorbid.ts  nftamm.ts  shop.ts
utils/: accountDerivation.ts  actions.ts  carnival_actions.ts  carnival_data.ts  constants.ts  createNFTs.ts  helpfulFunctions.ts  nftfloor.ts
(+181 files in other folders)
