[package]
name = "displaycase"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "displaycase"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
solana-program = "1.9.13"
anchor-spl = "0.24.2"
mpl-token-metadata = {version="1.2.10", features = ["no-entrypoint"]}
rust_decimal = "1.22"   
rust_decimal_macros = "1.22"
