[package]
name = "exhibition"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exhibition"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
solana-program = "1.9.13"
anchor-spl = "0.24.2"
mpl-token-metadata = {version="1.2.10", features = ["no-entrypoint"]}

[dependencies.borsh]
version = "~0.9.2"
